# ChangeLog for net-libs/libpri
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libpri/ChangeLog,v 1.6 2004/07/01 22:26:42 eradicator Exp $

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> libpri-0.4.0.ebuild,
  libpri-0.6.0.ebuild:
  virtual/glibc -> virtual/libc

  10 May 2004; David Holm <dholm@gentoo.org> libpri-0.4.0.ebuild:
  Added to ~ppc.

*libpri-0.6.0 (10 May 2004)

  10 May 2004; Stefan Knoblich <stkn@gentoo.org> libpri-0.6.0.ebuild:
  version bump.

  19 Feb 2004; Stefan Knoblich <stkn@gentoo.org> libpri-0.4.0.ebuild:
  fixed SRC_URI

*libpri-0.4.0 (04 Jan 2004)

  04 Jan 2004; Stefan Knoblich <stkn@gentoo.org> libpri-0.4.0.ebuild,
  metadata.xml:
  initial import. ebuild created by Ray Russell Reese III <anti@gentoo.org>
