@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libpri/libpri-0.4.0.ebuild,v 1.5 2004/07/01 22:26:42 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libpri/libpri-0.4.0.ebuild,v 1.6 2004/07/26 22:34:56 stkn Exp $
 
 IUSE=""
 
@@ -10,7 +10,7 @@ SRC_URI="ftp://ftp.asterisk.org/pub/telephony/libpri/old/libpri-${PV}.tar.gz"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~ppc"
+KEYWORDS="x86 ~ppc"
 
 DEPEND="virtual/libc"
 
