@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/zapata/zapata-0.9.1.ebuild,v 1.3 2004/07/01 22:28:13 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/zapata/zapata-0.9.1.ebuild,v 1.4 2004/07/26 22:35:59 stkn Exp $
 
 IUSE=""
 
@@ -8,11 +8,11 @@ inherit eutils
 
 DESCRIPTION="Library of additional telephony related functions"
 HOMEPAGE="http://www.asterisk.org"
-SRC_URI="ftp://ftp.asterisk.org/pub/telephony/zaptel/zapata-${PV}.tar.gz"
+SRC_URI="ftp://ftp.asterisk.org/pub/telephony/zaptel/old/zapata-${PV}.tar.gz"
 
 SLOT="0"
 LICENSE="BSD"
-KEYWORDS="~x86"
+KEYWORDS="x86"
 
 DEPEND="virtual/libc
 	=net-misc/zaptel-0.9.1"
