@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libpri
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libpri/ChangeLog,v 1.6 2004/07/01 22:26:42 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libpri/ChangeLog,v 1.7 2004/07/26 22:34:56 stkn Exp $
+
+  27 Jul 2004; root <root@gentoo.org> libpri-0.4.0.ebuild:
+  stable on x86
 
   01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> libpri-0.4.0.ebuild,
   libpri-0.6.0.ebuild:
